build the sidebar layout

--- a/public/index.html
+++ b/public/index.html
@@ -9,109 +9,61 @@
 </head>
 
 <body>
-    <div class="main-div flex overflow-y-hidden h-screen">
-        <div class="left-section sidebar bg-blue-600 w-48 flex-none overflow-y-auto flex flex-col justify-between">
-            <div>one - Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio quaerat aperiam laborum porro iure
-                ullam assumenda! Facilis facere culpa reiciendis officiis ex laudantium nihil porro consequatur ipsa
-                perspiciatis accusantium neque quaerat ducimus dignissimos asperiores ut, impedit repellendus soluta aut
-                et assumenda omnis. Excepturi repellat tempore, optio ducimus qui hic consequatur necessitatibus
-                eligendi tempora dolore nemo aliquid laudantium eaque atque natus neque blanditiis iusto repudiandae
-                debitis, tenetur corrupti officia non ipsum! Adipisci sequi doloribus qui. Facilis ullam, ipsa tempora
-                esse a molestiae eaque doloribus quos ipsum blanditiis itaque animi quia impedit iusto est, quisquam
-                assumenda dolore tempore officiis eos accusantium sunt?</div>
-            <div>two</div>
+    <!-- both sections -->
+    <div class="main-div flex overflow-y-hidden h-screen text-sm text-gray-400">
+        <!-- sidebar -->
+        <div
+            class="left-section sidebar bg-gray-900-dashboard w-48 flex-none overflow-y-auto flex flex-col  font-semibold ">
+            <div class="pt-6 mb-20  mx-auto">Logo </div>
+            <ul class="">
+                <li class="">
+                    <a href="#" class="flex items-center  mx-4 mt-4 ">
+
+
+
+                        <span class="pl-4  font-semibold text-sm bg text-gray-500 ">DASHBOARD</span>
+                    </a></li>
+                <li class="border-l-4 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
+                    <a href="#" class="  mx-4 ">
+
+
+
+                        <span class="ml-4  font-medium font-sans font-m text-xs text-gray-600">Home</span>
+                    </a></li>
+                <li class="border-l-2 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
+                    <a href="#" class="  mx-4 ">
+
+
+
+                        <span class="ml-4  font-medium font-sans font-m text-xs  text-gray-600">Complaints</span>
+                    </a></li>
+
+                <li class="border-l-4 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
+                    <a href="#" class="  mx-4 ">
+
+
+
+                        <span class="ml-4  font-medium font-sans font-m text-xs  text-gray-600">History</span>
+                    </a></li>
+
+                <li class="border-l-4 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
+                    <a href="#" class="  mx-4 ">
+
+
+
+                        <span class="ml-4  font-medium font-sans font-m text-xs  text-gray-600">Support</span>
+                    </a></li>
+
+            </ul>
             <div>three</div>
 
         </div>
 
-
-        <div class="right-section bg-blue-300 flex-1 overflow-y-auto ">content area - Lorem ipsum dolor sit amet,
-            consectetur adipisicing
-            elit. Assumenda tempora doloremque cum blanditiis, excepturi exercitationem? Dicta eos consectetur neque
-            dolorem ea totam molestias, porro maiores ratione inventore adipisci, iste id beatae sunt rem necessitatibus
-            facere voluptate placeat? Minima laudantium ea minus cupiditate facere aspernatur optio! Nam officia porro
-            facilis quo illum adipisci nesciunt quas cupiditate. Eaque ipsum culpa eos expedita rem libero corporis
-            facilis distinctio facere perferendis id minima, porro temporibus asperiores voluptatem dolores ullam harum
-            incidunt debitis cupiditate ea? Eos tempora quam aliquam, rerum expedita eum quasi, magni delectus
-            cupiditate dolorem vitae. Tempora ad error laborum in dolore vel laboriosam sit suscipit, rerum rem,
-            officiis voluptatibus repudiandae perferendis, voluptatem aliquid minima repellendus harum nulla labore modi
-            blanditiis. Repudiandae harum quisquam cum? Vel nulla quia similique dolorum at aperiam consectetur
-            distinctio autem? Tenetur, corporis accusantium officiis ea repudiandae possimus non eum sit vero fuga
-            mollitia error necessitatibus nulla suscipit tempore id eaque ab iusto veritatis eligendi. Dignissimos saepe
-            necessitatibus quisquam neque assumenda illo ullam dicta. Labore praesentium incidunt, dolor in perferendis
-            quis? Voluptates saepe, doloribus numquam voluptatem quasi excepturi aut ab eos ea dignissimos quos cumque
-            sequi illo ipsa quidem id fugiat amet dolores error dolor nesciunt molestias suscipit! Ratione fugiat ab,
-            atque soluta perferendis voluptate cum quos ex, minima hic doloremque suscipit eos nostrum perspiciatis
-            officiis officia quaerat quasi deserunt eaque qui repudiandae exercitationem sit? Libero quod asperiores
-            dolorum inventore consectetur. Numquam debitis voluptate, error ipsa quidem labore autem nisi? Est odio
-            quaerat nulla voluptas qui, ipsa hic iure suscipit cum asperiores ea iusto natus provident porro velit, quas
-            ad ratione officiis neque possimus laborum aperiam pariatur rem adipisci? Provident voluptates repudiandae
-            nam quod adipisci molestiae velit excepturi sunt maiores totam, sapiente tempore debitis aut delectus cum
-            exercitationem aliquam. Cumque rem facilis necessitatibus minus nihil est possimus delectus optio ad. Unde
-            recusandae similique accusamus dolorum, officia reprehenderit nemo iusto magnam, porro beatae asperiores
-            quam debitis labore maxime necessitatibus consequuntur magni omnis temporibus? Consequatur consequuntur
-            animi minima, quibusdam quidem enim iste laborum. Quam atque incidunt, molestias deserunt provident vel, ex
-            quas hic ipsum ratione, ab fugiat facilis ipsam! Repellat labore similique iure ducimus voluptatum porro
-            doloribus harum nam voluptates, nobis commodi ipsa numquam repellendus consequuntur animi? Quae doloribus
-            alias dolorum earum itaque odio, velit saepe laborum hic minus minima molestiae aperiam officia provident
-            quis explicabo repellendus maiores. Magni dolorum facilis necessitatibus autem illum nostrum quod id dolore
-            quasi cumque voluptatum eos, doloribus provident cum quae nulla obcaecati! Fugiat itaque asperiores
-            accusantium quaerat illum omnis alias possimus, dicta repudiandae dolorum pariatur laborum obcaecati,
-            assumenda ex suscipit maiores reprehenderit ipsam porro saepe. Ratione mollitia illo, labore non dolorem
-            voluptatum eaque. Consequuntur, rerum quo, sunt architecto libero provident error nulla eveniet debitis
-            soluta aliquam exercitationem fugiat veniam inventore maiores nesciunt eius distinctio harum magnam,
-            reiciendis laboriosam alias? Cumque possimus placeat, optio voluptate voluptatibus quis ut explicabo quod
-            quas est asperiores repellendus voluptatum iste adipisci laudantium incidunt corrupti ex vero minus debitis
-            dignissimos sint animi cum? Illo et cum, aliquam ratione distinctio amet nihil quibusdam ad quis nobis
-            commodi quasi? Reprehenderit iusto quasi, eaque, tempore odit veniam commodi ratione delectus dolorum ipsa
-            voluptatibus facilis accusantium temporibus nulla voluptatem totam provident sequi at ea assumenda
-            dignissimos, quas quisquam. Sed libero, ea voluptatem ratione voluptatum temporibus nihil, neque vel error
-            nemo praesentium minus eos non omnis deleniti odio velit dignissimos provident qui impedit pariatur vero
-            accusamus? Vero, minus! Harum similique rerum ullam ipsam pariatur voluptatibus architecto expedita nisi,
-            iste sit saepe, dolores omnis obcaecati sunt, nostrum doloremque totam sed consequatur debitis? Assumenda
-            nulla fugit harum, nihil ducimus doloremque aspernatur cupiditate nemo architecto ipsam delectus recusandae?
-            Sequi aut itaque accusantium totam aperiam incidunt eos eveniet sunt distinctio odit cum reprehenderit ullam
-            necessitatibus fugit debitis non, error vitae aspernatur reiciendis recusandae soluta culpa repudiandae sed
-            unde? Cupiditate consectetur voluptas nobis vero! Modi consequuntur debitis cupiditate nemo illo soluta,
-            quam sequi iste, quod eveniet a delectus error perferendis! Nostrum similique accusamus voluptatum numquam
-            quidem quia, eligendi dolores officiis, aut vitae iusto voluptatibus dicta alias id maiores velit repellat
-            sed optio voluptates cum, fugiat tempora soluta. Placeat eum architecto, ipsa nostrum accusantium suscipit
-            culpa voluptas! Necessitatibus iusto esse facere, quae nulla totam atque consequuntur, modi reprehenderit
-            hic, reiciendis eaque tenetur vel praesentium mollitia dolores vero? Dignissimos, quaerat odit! Neque autem
-            voluptate vel magni eum commodi animi libero amet, obcaecati, vitae quasi corporis eius nam facilis nostrum
-            provident deserunt iusto nulla natus tempora dicta, quae facere molestiae eaque? Iste, minima veritatis.
-            Officia doloribus architecto eos voluptatibus sequi velit minus tempore dolorum? Voluptatem soluta saepe
-            doloribus reiciendis incidunt, consectetur corporis minima dolor, perspiciatis vitae, beatae consequuntur!
-            Excepturi dolorem pariatur saepe deleniti tempore nisi quia unde maxime rem minima, harum facere voluptate
-            consequuntur maiores quas laborum atque expedita doloribus quam officiis! Error fugit est alias eos optio
-            voluptatibus, aperiam ab ad obcaecati hic iste laboriosam explicabo! Quam doloremque harum nisi eius dolorum
-            obcaecati sed debitis eos similique esse, ratione cupiditate possimus reiciendis iure, vel consectetur?
-            Adipisci nostrum iure iste dolores distinctio at sequi rem odit dignissimos dicta sit repellendus, modi
-            facilis. Eaque blanditiis hic dolor dignissimos cupiditate! Quam, quibusdam aut perspiciatis qui et nam
-            dolor molestiae voluptatibus provident, beatae, tenetur eligendi inventore! Sit recusandae porro numquam
-            amet praesentium maiores optio accusamus eos ad, asperiores expedita aliquam laboriosam perferendis
-            reprehenderit cumque veniam voluptate vero. Nobis voluptatibus optio autem dolores voluptas accusantium,
-            nesciunt dolore eligendi voluptate officiis quo quidem, veniam qui quas ad et id dignissimos iste libero
-            quibusdam mollitia alias debitis repellendus laborum. Nostrum voluptatum, quaerat veniam placeat, voluptate
-            excepturi quae dolor nisi qui sit dicta animi enim. Similique quidem suscipit nobis aspernatur, qui fugiat
-            sint eos unde est vel facilis debitis nam alias doloribus, dicta quibusdam. Porro quasi rem quaerat
-            molestiae quam vitae quas error accusamus, corporis est in explicabo! Consequuntur consequatur dignissimos
-            cumque provident debitis. Quibusdam ea, harum natus aperiam ipsa voluptate impedit aut sapiente, fugit,
-            consequuntur odio sunt minima. Placeat culpa sapiente maiores! Velit, cum laudantium, error architecto unde
-            eaque nihil sed praesentium ducimus quibusdam, sunt doloremque odio est veniam quod dicta tempore nemo
-            repudiandae beatae totam? Consequuntur earum minus dicta laboriosam eos ab est quod nostrum architecto
-            dolor, obcaecati molestias, dignissimos eveniet, voluptate sequi nisi cum rem numquam sed nesciunt culpa
-            atque suscipit nihil magni? Delectus ab odit fugit eum aspernatur iusto dolorum nam quod sit deserunt atque
-            distinctio, fuga, quos animi doloremque labore laboriosam fugiat eius ut inventore, tempora saepe.
-            Reprehenderit culpa quas facilis soluta dignissimos ipsum consequatur illo magni dolores debitis inventore
-            impedit, modi, rerum sunt, natus nulla voluptatibus cum beatae dolorum quia ad. Ratione illum optio
-            explicabo maiores ex accusamus eius, harum recusandae illo, placeat accusantium eaque aspernatur, tempore
-            veritatis alias sit! Quis vel suscipit omnis hic molestias voluptatem laborum laudantium ducimus repudiandae
-            facere numquam atque doloremque aperiam rem expedita fugit, consequuntur et aliquam iste excepturi ex qui
-            autem magnam. Dolor facilis recusandae soluta non similique quibusdam veritatis debitis harum asperiores, in
-            aliquid, minus omnis, excepturi nemo quod expedita molestias officia id commodi tempore possimus quam fugit.
-            Qui optio sapiente exercitationem adipisci autem aliquid impedit, quo pariatur odit minus, quam rem unde?
-            Ullam officia repudiandae aut. Error voluptas, corporis esse delectus sequi numquam totam blanditiis
+        <!-- content section -->
+        <div class="right-section content-dashboard bg-gray-800-dashboard flex-1 overflow-y-auto ">content area - Lorem
+            ipsum dolor sit
+            amet,
+            coelectus sequi numquam totam blanditiis
             distinctio cumque voluptatem eveniet temporibus ut libero similique quo nemo magni nulla impedit sit
             sapiente! Distinctio dicta minus incidunt error vel amet ab vitae repudiandae nostrum optio. Quia velit
             soluta doloremque eaque ipsam laboriosam sit vel. Modi eum ab dolores necessitatibus, optio aut, beatae quas
