cleaned up content area

--- a/public/index.html
+++ b/public/index.html
@@ -61,67 +61,7 @@
 
         <!-- content section -->
         <div class="right-section content-dashboard bg-gray-800-dashboard flex-1 overflow-y-auto ">content area - Lorem
-            ipsum dolor sit
-            amet,
-            coelectus sequi numquam totam blanditiis
-            distinctio cumque voluptatem eveniet temporibus ut libero similique quo nemo magni nulla impedit sit
-            sapiente! Distinctio dicta minus incidunt error vel amet ab vitae repudiandae nostrum optio. Quia velit
-            soluta doloremque eaque ipsam laboriosam sit vel. Modi eum ab dolores necessitatibus, optio aut, beatae quas
-            provident qui ut eveniet sed iusto quos saepe voluptatum delectus nam ratione. Corrupti quibusdam autem
-            fugiat tenetur in! Dignissimos itaque cum, deserunt maiores architecto facere earum similique quasi facilis
-            placeat enim tempore, dolorem dolorum mollitia odio consectetur omnis autem quaerat adipisci quisquam
-            tempora culpa veritatis vitae. Aliquid est deleniti quaerat error dolor non vitae fugiat delectus quae
-            explicabo? Tenetur rem esse a tempora consequatur, fugiat recusandae dolorum unde minus voluptatum id ullam
-            corporis? Laborum delectus rem minus quis libero. Minima, voluptatibus nam. Esse eaque quae neque similique
-            fugit sint quo aliquam recusandae illum repellat doloribus, autem reiciendis amet suscipit ducimus,
-            exercitationem modi aut laudantium laboriosam in eos? Est repellat minima voluptate perferendis adipisci
-            illum praesentium! Odio, in rem eveniet architecto explicabo quibusdam vel? Omnis corporis perspiciatis
-            quasi repudiandae laborum cupiditate, eveniet laudantium? Aspernatur voluptate doloremque velit atque
-            nostrum voluptatem ducimus autem vitae placeat. Eius necessitatibus labore pariatur similique aliquam a
-            laborum voluptatum obcaecati quas aspernatur fugit ut architecto quasi, est ea ab mollitia autem iste
-            voluptatem nam! Repudiandae ut impedit possimus veniam ad assumenda. Reprehenderit, eos! Odit ea, dolor
-            incidunt, ipsum itaque facilis consequatur beatae necessitatibus, voluptates tempora soluta voluptatibus
-            iure tenetur suscipit id. Quibusdam, similique atque voluptates qui assumenda non officiis ut ipsam veniam
-            voluptatibus expedita quia ad aliquid perspiciatis quam, cum corporis. Quibusdam, numquam eius. Veniam, quam
-            distinctio id facere nam eos exercitationem earum dolorem iste dolor magnam expedita obcaecati numquam, eum
-            quaerat laudantium sint in iure ab eligendi. Fugit eius suscipit, quibusdam, illo maiores incidunt
-            temporibus distinctio aliquam vero nihil error recusandae quis et nesciunt, impedit mollitia sunt quos
-            laudantium voluptatum sapiente nulla neque consequatur fugiat ipsum. Laudantium beatae magni nemo neque sit
-            quaerat illum, qui corrupti. Ea aliquam dolores iusto, maiores eveniet omnis assumenda nobis ab quos fugit
-            cumque, alias accusantium saepe rem neque. Culpa tenetur nesciunt quis. Neque dolores laborum molestias nemo
-            quia vero provident enim illum inventore cupiditate facere libero incidunt impedit deserunt asperiores
-            obcaecati nisi minus unde, minima ad commodi vel necessitatibus. Voluptas id nesciunt dicta laborum odio,
-            sunt eos ipsa dignissimos odit, quia ut voluptatibus veniam nemo, itaque reiciendis? Deserunt assumenda sit
-            odit temporibus accusamus placeat commodi corporis, iusto atque aliquid! Explicabo odio cum blanditiis saepe
-            unde nostrum architecto ullam earum vel atque, quas dolorum excepturi neque officia accusamus commodi rerum
-            nobis voluptate aperiam. Harum aliquid nesciunt beatae, ex eaque, provident dolorum placeat quas distinctio
-            quaerat tempora est, iusto amet assumenda ratione excepturi? Sequi ab ex vel doloribus accusamus dolore fuga
-            tempora nihil iusto itaque sit beatae quos tenetur laboriosam aliquam minima maxime sint, suscipit provident
-            dignissimos perspiciatis non! Doloremque, tempore nesciunt quam labore architecto dolor earum facere.
-            Voluptates atque id, harum dicta doloremque asperiores iste quibusdam commodi, reprehenderit quos facere
-            fugiat corrupti laboriosam magnam maiores? Pariatur maiores provident dolorem non? Quisquam quas magnam, sit
-            nam, fugiat natus non tenetur, tempora inventore sed nihil veritatis suscipit. Obcaecati, consequuntur optio
-            atque velit aliquam hic, deleniti esse aperiam iusto facere iure quidem labore perspiciatis ullam doloremque
-            debitis eius non. Omnis, vitae at, alias maiores eaque amet saepe atque voluptates ipsum magni temporibus
-            facilis quos minus corrupti voluptatum doloribus tempora, autem quis ducimus exercitationem commodi minima
-            reiciendis velit incidunt. A nisi odio numquam cupiditate nihil dolore dolorem totam aliquam, suscipit
-            nesciunt, quibusdam repellendus eveniet! Ipsam corporis vitae officia deserunt provident explicabo repellat,
-            soluta dolore et blanditiis tempora, illo tempore laboriosam porro, error repudiandae nobis. Numquam ullam
-            perspiciatis corporis esse quaerat fugiat provident alias adipisci! Ab mollitia totam provident deserunt
-            minima odio nihil, sequi id possimus consequuntur praesentium dolor itaque suscipit! Velit, aliquam!
-            Adipisci omnis rerum temporibus harum qui unde eaque. Cumque voluptate voluptas possimus nesciunt eligendi!
-            Est quisquam dolorum unde, inventore at veritatis blanditiis tenetur provident delectus! Fugit quia iusto
-            facere corporis earum! Aliquam ad, totam velit voluptate enim sunt ipsum quod, minima impedit praesentium,
-            adipisci temporibus veniam ipsam nisi eligendi iure laborum architecto expedita corrupti aut ratione
-            possimus! Quas vel deserunt atque possimus accusamus, corporis, porro animi, minima rerum officiis quidem
-            non ab sed molestias! Molestiae, aperiam ipsum quae facere sit et odit quaerat fugit ratione nostrum modi
-            explicabo sint natus saepe quidem consequuntur facilis eos pariatur! Tenetur nihil exercitationem
-            consequatur in. Hic eaque quaerat molestiae facilis velit quae voluptatem minima, quidem doloremque ipsa
-            culpa, eum fugit quasi rem temporibus, minus iusto rerum voluptates debitis earum! Sint consequatur
-            excepturi eaque quae aliquid vitae fugiat suscipit atque dicta, porro eius commodi nulla maxime quidem ipsum
-            culpa soluta voluptate impedit veniam adipisci aut voluptas, dolorem enim. Cum quod adipisci, quidem id vero
-            laboriosam exercitationem. Nam deserunt possimus consequatur, enim dicta ipsum consequuntur eveniet expedita
-            doloremque repellat culpa iure ipsam natus. Ab, at eveniet.</div>
+            .</div>
     </div>
 
 
