added svg to sidebar & colors

--- a/public/index.html
+++ b/public/index.html
@@ -14,48 +14,108 @@
         <!-- sidebar -->
         <div
             class="left-section sidebar bg-gray-900-dashboard w-48 flex-none overflow-y-auto flex flex-col  font-semibold ">
-            <div class="pt-6 mb-20  mx-auto">Logo </div>
+            <div class="pt-5 mb-20  mx-auto">Logo </div>
             <ul class="">
-                <li class="">
-                    <a href="#" class="flex items-center  mx-4 mt-4 ">
+                <li class=" pl-1 mb-4">
+                    <a href="#" class=" flex items-center mx-4  ">
+                        <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 384">
+                            <path
+                                d="M213.333 0H384v128H213.333zM0 0h170.667v213.333H0zM0 256h170.667v128H0zM213.333 170.667H384V384H213.333z" />
+                        </svg>
 
 
+                        <span class="pl-2 font-mono font-semibold text-sm bg text-gray-400 ">DASHBOARD</span>
+                    </a>
+                </li>
+                <li
+                    class=" border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2  ">
+                    <a href="#" class="flex items-center  mx-4 ">
 
-                        <span class="pl-4  font-semibold text-sm bg text-gray-500 ">DASHBOARD</span>
-                    </a></li>
-                <li class="border-l-4 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
-                    <a href="#" class="  mx-4 ">
-
-
-
-                        <span class="ml-4  font-medium font-sans font-m text-xs text-gray-600">Home</span>
-                    </a></li>
-                <li class="border-l-2 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
-                    <a href="#" class="  mx-4 ">
-
+                        <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.001 512.001">
+                            <path
+                                d="M503.402 228.885L273.684 19.567c-10.083-9.189-25.288-9.188-35.367-.001L8.598 228.886c-8.077 7.36-10.745 18.7-6.799 28.889 3.947 10.189 13.557 16.772 24.484 16.772h36.69v209.721c0 8.315 6.742 15.057 15.057 15.057h125.914c8.315 0 15.057-6.741 15.057-15.057V356.932h74.002v127.337c0 8.315 6.742 15.057 15.057 15.057h125.908c8.315 0 15.057-6.741 15.057-15.057V274.547h36.697c10.926 0 20.537-6.584 24.484-16.772 3.941-10.19 1.273-21.529-6.804-28.89zM445.092 42.73H343.973l116.176 105.636v-90.58c0-8.315-6.741-15.056-15.057-15.056z" />
+                        </svg>
 
 
-                        <span class="ml-4  font-medium font-sans font-m text-xs  text-gray-600">Complaints</span>
-                    </a></li>
+                        <span class="ml-4  font-medium font-mono font-m text-xs text-gray-600">Home</span>
+                    </a>
+                </li>
+                <li
+                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2 ">
+                    <a href="#" class="flex items-center  mx-4 ">
+                        <svg class="w-3 fill-current" viewBox="0 0 64 64" width="512"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M25.36 50H10V4h38v4.26a1 1 0 002 0V3a1 1 0 00-1-1H9a1 1 0 00-1 1v48a1 1 0 001 1h16.36a1 1 0 000-2zM48 31.74v1.32a1 1 0 002 0v-1.32a1 1 0 10-2 0z" />
+                            <path
+                                d="M42 34a13.89 13.89 0 00-8.25 2.71 1 1 0 101.18 1.61A11.88 11.88 0 0142 36a12 12 0 11-12 12 11.88 11.88 0 012.32-7.07 1 1 0 10-1.61-1.18A14 14 0 1042 34z" />
+                            <path
+                                d="M37.05 53.05a1 1 0 001.41 1.41 5 5 0 017.08 0 1 1 0 00.7.3 1 1 0 00.76-1.71 7 7 0 00-9.9 0zM48.89 42.55a1 1 0 00-1.34-.44l-4 2a1 1 0 00-.44 1.34A1 1 0 0044 46a.93.93 0 00.45-.11l4-2a1 1 0 00.44-1.34z" />
+                            <circle cx="47" cy="47" r="1" />
+                            <path
+                                d="M40.45 44.11l-4-2a1 1 0 10-.9 1.78l4 2A.93.93 0 0040 46a1 1 0 00.89-.55 1 1 0 00-.44-1.34z" />
+                            <circle cx="37" cy="47" r="1" />
+                            <path
+                                d="M40 12a1 1 0 00-1-1H20V9h19a1 1 0 000-2H19a1 1 0 00-1 1v4a1 1 0 001 1h20a1 1 0 001-1zM35 18a1 1 0 000-2H22a1 1 0 000 2zM15 22a1 1 0 001 1h19a1 1 0 000-2H16a1 1 0 00-1 1zM38 27a1 1 0 00-1-1H16a1 1 0 000 2h21a1 1 0 001-1zM16 31a1 1 0 000 2h18a1 1 0 000-2zM27 36H16a1 1 0 000 2h11a1 1 0 000-2zM25 43a1 1 0 000-2h-9a1 1 0 000 2zM38 20a9 9 0 109-9 9 9 0 00-9 9zm16 0a7 7 0 11-7-7 7 7 0 017 7z" />
+                            <path
+                                d="M44.88 16.46a1 1 0 00-1.42 1.42L45.59 20l-2.13 2.12a1 1 0 000 1.42 1 1 0 00.71.29 1 1 0 00.71-.29L47 21.41l2.12 2.13a1 1 0 00.71.29 1 1 0 00.71-.29 1 1 0 000-1.42L48.41 20l2.13-2.12a1 1 0 00-1.42-1.42L47 18.59z" />
+                        </svg>
 
-                <li class="border-l-4 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
-                    <a href="#" class="  mx-4 ">
+
+                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">Complaints</span>
+                    </a>
+                </li>
+
+                <li
+                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2  ">
+                    <a href="#" class="flex items-center  mx-4 ">
+
+                        <svg class="w-3 fill-current" viewBox="0 0 512 512" width="512pt"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M458 381.113V163.668c0-3.2-1.531-6.207-4.117-8.09l-24.688-17.95 19.438-12.148a10.002 10.002 0 004.691-8.03 10.006 10.006 0 00-3.953-8.419l-18.039-13.668V89H448c5.523 0 10-4.477 10-10V59c0-32.531-26.469-59-59-59H58c-.102 0-.195.012-.293.016-.23-.004-.453-.016-.684-.016-15.746 0-30.375 7.777-41.191 21.902C5.622 35.234 0 52.812 0 71.398 0 104.812 21.871 132 48.754 132h55.324v158.5a9.996 9.996 0 004.559 8.39l19.605 12.712-20.828 18.609a10.002 10.002 0 00-3.336 7.457v86.664c0 .54.055 1.066.137 1.582-.082.52-.137 1.047-.137 1.586 0 25.441 6.57 46.855 18.996 61.926C135.078 503.98 152.148 512 171.137 512H446c36.395 0 66-29.605 66-66 0-32.293-23.32-59.227-54-64.887zM82.074 112c2.946-5.55 4.614-11.957 4.614-18.84 0-23.055-14.934-39.16-36.32-39.16-5.524 0-10 4.477-10 10s4.476 10 10 10c10.218 0 16.32 7.164 16.32 19.16 0 12.238-9.243 18.84-17.934 18.84C33.168 112 20 93.406 20 71.398 20 43.058 36.61 20 57.023 20c14.141 0 25.196 4.395 32.848 13.059 9.43 10.668 14.207 27.976 14.207 51.441V112zm56.43 364.7c-9.438-11.446-14.426-28.458-14.426-49.2 0-.54-.055-1.066-.137-1.586.082-.516.137-1.043.137-1.582v-82.191l27.25-24.352a10 10 0 00-1.219-15.848l-26.03-16.875V84.5c0-28.371-6.419-50.066-19.063-64.5H399c21.504 0 39 17.496 39 39v10h-16.668c-5.52 0-10 4.477-10 10v21.332c0 3.133 1.469 6.082 3.965 7.973l10.433 7.906-19.695 12.309a10 10 0 00-.582 16.566L438 168.758V380H183.766c-.493 0-.977.047-1.453.117-.961-.07-1.93-.117-2.91-.117-21.27 0-37.934 17.063-37.934 38.84 0 23.058 14.933 39.16 36.32 39.16 5.524 0 10-4.477 10-10s-4.476-10-10-10c-10.219 0-16.32-7.164-16.32-19.16 0-12.238 9.242-18.84 17.933-18.84 15.586 0 28.754 18.594 28.754 40.602 0 28.34-16.605 51.398-37.02 51.398-13.093 0-24.378-5.29-32.632-15.3zM446 492H210.793c.516-.625 1.031-1.25 1.531-1.902 9.586-12.516 15.125-28.778 15.77-46.098H384c5.523 0 10-4.477 10-10s-4.477-10-10-10H226.281c-2.07-9.031-5.781-17.215-10.718-24H446c25.363 0 46 20.637 46 46s-20.637 46-46 46zm0 0" />
+                            <path
+                                d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
+                        </svg>
+
+                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">History</span>
+                    </a>
+                </li>
+
+                <li
+                    class="border-l-4 border-transparent  hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2 ">
+                    <a href="#" class="flex items-center  mx-4 ">
+                        <svg class="w-3 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path
+                                d="M44.07 403.93C42.21 402.07 39.63 401 37 401s-5.21 1.069-7.07 2.93C28.07 405.79 27 408.37 27 411s1.07 5.21 2.93 7.069C31.79 419.93 34.37 421 37 421s5.21-1.07 7.07-2.931C45.93 416.21 47 413.63 47 411s-1.07-5.21-2.93-7.07z" />
+                            <path
+                                d="M445.627 115.988l-.013-.01-66.666-45.032c-12.782-8.634-28.008-11.83-42.585-9.68.651-3.141.992-6.369.992-9.651 0-12.579-4.899-24.405-13.794-33.301l-4.521-4.521C310.146 4.898 298.319 0 285.74 0c-12.579 0-24.406 4.898-33.302 13.794-8.895 8.896-13.793 20.722-13.793 33.302 0 12.579 4.899 24.405 13.793 33.3l4.521 4.522c5.665 5.664 12.521 9.7 20 11.89l-67.283 50.694a27.851 27.851 0 00-9.218 12.145c-4.842-.978-9.974-.704-14.882 1.049l-65.179 23.26a46.834 46.834 0 003.698-18.293v-6.394c0-25.968-21.127-47.095-47.095-47.095s-47.095 21.127-47.095 47.095v6.394c0 18.069 10.234 33.785 25.205 41.68C38.195 214.491 27 231.198 27 249.722V369c0 5.522 4.477 10 10 10s10-4.478 10-10v-18.3h39.443a9.952 9.952 0 005.616-1.727l45.219-30.695a26.618 26.618 0 0115.005-4.611c14.731 0 26.716 11.984 26.716 26.715v61.974l-28 11.205V363.5a10.001 10.001 0 00-15.133-8.582L85.2 385.228c-6.292 3.764-10.2 10.657-10.2 17.989V492H47v-41.98c0-5.522-4.477-10-10-10s-10 4.478-10 10V502c0 5.522 4.477 10 10 10h48c5.523 0 10-4.478 10-10v-98.783c0-.337.18-.654.468-.826L131 381.135V502c0 5.522 4.477 10 10 10h334c5.523 0 10-4.478 10-10V188.722c0-29.459-14.716-56.633-39.373-72.734zM271.102 70.777l-4.521-4.523c-5.118-5.117-7.936-11.921-7.936-19.158 0-7.238 2.818-14.042 7.936-19.159C271.698 22.818 278.502 20 285.74 20s14.041 2.818 19.159 7.937l4.521 4.521c10.564 10.563 10.564 27.754 0 38.318-10.565 10.564-27.755 10.564-38.318.001zm-49.39 92.698l99.208-74.748c13.748-10.357 32.569-10.842 46.833-1.208l55.437 37.447-48.926 39.357-38.37-25.919a9.995 9.995 0 00-9.387-.968l-97.01 39.726c-3.602 1.472-7.809.071-9.808-3.262l-.028-.047a7.922 7.922 0 012.051-10.378zm-171.807 2.188v-6.394c0-14.94 12.155-27.095 27.095-27.095s27.095 12.154 27.095 27.095v6.394c0 14.94-12.155 27.096-27.095 27.096s-27.095-12.155-27.095-27.096zM107 262.333v52.327L83.371 330.7H47V249.722c0-10.97 6.941-20.816 17.272-24.503l128.025-45.688a7.947 7.947 0 019.487 3.425c2.121 3.578 1.097 8.226-2.33 10.581l-88.118 60.555a9.999 9.999 0 00-4.336 8.241zm45.284 31.334A46.53 46.53 0 00127 301.109v-33.515l83.782-57.575a27.765 27.765 0 0010.173-12.877c1.854.38 3.748.583 5.655.583 3.516 0 7.068-.664 10.467-2.056l92.058-37.697 39.736 26.841c8.849 6.784 14.13 17.469 14.13 28.625V292h-19.667c-2.213 0-4.363.734-6.115 2.087L257.817 370.9 199 394.395v-54.013c0-25.759-20.957-46.715-46.716-46.715zM465 492H151v-56.894l115.534-46.153a9.99 9.99 0 002.405-1.373L366.747 312H465v180zm0-200h-20v-78.867c0-5.522-4.477-10-10-10s-10 4.478-10 10V292h-22v-78.562c0-13.213-4.771-25.998-13.125-36.005l50.453-40.585C455.89 149.477 465 168.391 465 188.722V292z" />
+                            <path
+                                d="M427 352.333h-23.333c-5.523 0-10 4.478-10 10s4.477 10 10 10H417V411c0 5.522 4.477 10 10 10s10-4.478 10-10v-48.667c0-5.522-4.477-10-10-10zM434.07 442.951c-1.86-1.861-4.44-2.931-7.07-2.931s-5.21 1.07-7.07 2.931c-1.86 1.859-2.93 4.439-2.93 7.069s1.07 5.21 2.93 7.07 4.44 2.93 7.07 2.93 5.21-1.069 7.07-2.93c1.86-1.861 2.93-4.44 2.93-7.07s-1.07-5.21-2.93-7.069z" />
+                        </svg>
 
 
+                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">Support</span>
+                    </a>
+                </li>
 
-                        <span class="ml-4  font-medium font-sans font-m text-xs  text-gray-600">History</span>
-                    </a></li>
+                <li
+                    class="border-l-4 border-transparent hover:bg-gray-hover-sidebar hover:border-gray-hover-light py-2  ">
+                    <a href="#" class="flex items-center  mx-4 ">
 
-                <li class="border-l-4 border-transparent hover:border-gray-600 hover:bg-gray-800 py-1 mt-4 ">
-                    <a href="#" class="  mx-4 ">
+                        <svg class="w-3 fill-current" viewBox="0 0 512 512" width="512pt"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M458 381.113V163.668c0-3.2-1.531-6.207-4.117-8.09l-24.688-17.95 19.438-12.148a10.002 10.002 0 004.691-8.03 10.006 10.006 0 00-3.953-8.419l-18.039-13.668V89H448c5.523 0 10-4.477 10-10V59c0-32.531-26.469-59-59-59H58c-.102 0-.195.012-.293.016-.23-.004-.453-.016-.684-.016-15.746 0-30.375 7.777-41.191 21.902C5.622 35.234 0 52.812 0 71.398 0 104.812 21.871 132 48.754 132h55.324v158.5a9.996 9.996 0 004.559 8.39l19.605 12.712-20.828 18.609a10.002 10.002 0 00-3.336 7.457v86.664c0 .54.055 1.066.137 1.582-.082.52-.137 1.047-.137 1.586 0 25.441 6.57 46.855 18.996 61.926C135.078 503.98 152.148 512 171.137 512H446c36.395 0 66-29.605 66-66 0-32.293-23.32-59.227-54-64.887zM82.074 112c2.946-5.55 4.614-11.957 4.614-18.84 0-23.055-14.934-39.16-36.32-39.16-5.524 0-10 4.477-10 10s4.476 10 10 10c10.218 0 16.32 7.164 16.32 19.16 0 12.238-9.243 18.84-17.934 18.84C33.168 112 20 93.406 20 71.398 20 43.058 36.61 20 57.023 20c14.141 0 25.196 4.395 32.848 13.059 9.43 10.668 14.207 27.976 14.207 51.441V112zm56.43 364.7c-9.438-11.446-14.426-28.458-14.426-49.2 0-.54-.055-1.066-.137-1.586.082-.516.137-1.043.137-1.582v-82.191l27.25-24.352a10 10 0 00-1.219-15.848l-26.03-16.875V84.5c0-28.371-6.419-50.066-19.063-64.5H399c21.504 0 39 17.496 39 39v10h-16.668c-5.52 0-10 4.477-10 10v21.332c0 3.133 1.469 6.082 3.965 7.973l10.433 7.906-19.695 12.309a10 10 0 00-.582 16.566L438 168.758V380H183.766c-.493 0-.977.047-1.453.117-.961-.07-1.93-.117-2.91-.117-21.27 0-37.934 17.063-37.934 38.84 0 23.058 14.933 39.16 36.32 39.16 5.524 0 10-4.477 10-10s-4.476-10-10-10c-10.219 0-16.32-7.164-16.32-19.16 0-12.238 9.242-18.84 17.933-18.84 15.586 0 28.754 18.594 28.754 40.602 0 28.34-16.605 51.398-37.02 51.398-13.093 0-24.378-5.29-32.632-15.3zM446 492H210.793c.516-.625 1.031-1.25 1.531-1.902 9.586-12.516 15.125-28.778 15.77-46.098H384c5.523 0 10-4.477 10-10s-4.477-10-10-10H226.281c-2.07-9.031-5.781-17.215-10.718-24H446c25.363 0 46 20.637 46 46s-20.637 46-46 46zm0 0" />
+                            <path
+                                d="M189.36 98a10.1 10.1 0 007.07-2.93c1.86-1.86 2.93-4.441 2.93-7.07s-1.07-5.21-2.93-7.07a10.1 10.1 0 00-7.07-2.93c-2.641 0-5.212 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.07 5.21 2.93 7.07c1.858 1.86 4.429 2.93 7.07 2.93zm0 0M232 98h144.355c5.524 0 10-4.477 10-10s-4.476-10-10-10H232c-5.523 0-10 4.477-10 10s4.477 10 10 10zm0 0M189.355 154h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 210h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 266h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M189.355 322h187c5.524 0 10-4.477 10-10s-4.476-10-10-10h-187c-5.52 0-10 4.477-10 10s4.48 10 10 10zm0 0M422.871 424c-2.633 0-5.21 1.07-7.07 2.93-1.86 1.86-2.93 4.441-2.93 7.07s1.067 5.21 2.93 7.07a10.073 10.073 0 007.07 2.93 10.07 10.07 0 007.067-2.93c1.863-1.86 2.933-4.441 2.933-7.07s-1.07-5.21-2.933-7.07a10.07 10.07 0 00-7.067-2.93zm0 0" />
+                        </svg>
 
-
-
-                        <span class="ml-4  font-medium font-sans font-m text-xs  text-gray-600">Support</span>
-                    </a></li>
-
+                        <span class="ml-4  font-medium font-mono font-m text-xs  text-gray-600">History</span>
+                    </a>
+                </li>
             </ul>
-            <div>three</div>
+            <div>.</div>
 
         </div>
 
